--- a/virtual/todovirtual/templates/base.html
+++ b/virtual/todovirtual/templates/base.html
@@ -13,11 +13,15 @@
       crossorigin="anonymous"
     />
 
-    <title>detail</title>
+    <title>Hello, world!</title>
   </head>
   <body>
-    <div class="alert alert-primary" role="alert">{{ object.title }}</div>
-    <div class="alert alert-secondary" role="alert">{{ object.memo }}</div>
+    {% block header %}
+    {% endblock header %}
+    
+    {% block content %}
+    {% endblock content %}
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
