--- a/virtual/todovirtual/templates/list.html
+++ b/virtual/todovirtual/templates/list.html
@@ -1,2 +1,25 @@
-{% extends 'base.html' %} {% block header %} リストです {% endblock header %} {% block content %} {% for %} {% endblock
-content %}
+{% extends 'base.html' %}
+
+{% block header %}
+
+<div class="w-100">
+  <div class="bg-light p-3 p-sm-5 w-100">
+    <h1 class="display-4">Todolist</h1>
+    <p class="lead ms-2">Todolistを作って毎日効率的に</p>
+  </div>
+</div>
+
+{% endblock header %}
+
+{% block content %}
+{% for item in object_list  %}
+<div class="container mt-5">
+  <div class="alert alert-secondary" role="alert">
+    <p>{{ item.title }}</p>
+    <a href="#" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
+    <a href="#" class="btn btn-danger" tabindex="-1" role="button" aria-disabled="true">削除</a>
+    <a href="#" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true">詳細</a>
+  </div>
+</div>
+{% endfor  %}
+{% endblock content %}
